--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -32,7 +32,7 @@
 		<mosip.biometric.util.version>1.3.0-beta.1</mosip.biometric.util.version>
 		<mosip.openid.bridge.version>1.3.0-beta.1</mosip.openid.bridge.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
-		<nexus.staging.maven.plugin.version>1.6.14</nexus.staging.maven.plugin.version>
+		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -238,6 +238,17 @@
 			</exclusions>
 		</dependency>-->
 	</dependencies>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://central.sonatype.com/api/v1/publisher</url>
+		</repository>
+	</distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -253,6 +264,9 @@
 							<goal>build-info</goal>
 							<goal>repackage</goal>
 						</goals>
+						<configuration>
+							<attach>false</attach>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -314,6 +328,16 @@
 <build>
 	<plugins>
 		<plugin>
+			<groupId>org.sonatype.central</groupId>
+			<artifactId>central-publishing-maven-plugin</artifactId>
+			<version>${central.publishing.maven.plugin.version}</version>
+			<extensions>true</extensions>
+			<configuration>
+				<publishingServerId>ossrh</publishingServerId>
+				<autoPublish>false</autoPublish>
+			</configuration>
+		</plugin>
+		<plugin>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-maven-plugin</artifactId>
 			<version>3.2.3</version>
@@ -322,8 +346,21 @@
 				<layout>ZIP</layout>
 			</configuration>
 			<executions>
+				<!-- Build info and repackage -->
+				<execution>
+					<id>build-info-repackage</id>
+					<goals>
+						<goal>build-info</goal>
+						<goal>repackage</goal>
+					</goals>
+					<configuration>
+						<attach>false</attach>
+					</configuration>
+				</execution>
+				<!-- Integration test startup -->
 				<execution>
 					<id>pre-integration-test</id>
+					<phase>pre-integration-test</phase>
 					<goals>
 						<goal>start</goal>
 					</goals>
@@ -332,25 +369,20 @@
 							<folder>src/test/resources</folder>
 						</folders>
 						<profiles>
-							<profile>test</profile>
+							<profile>openapi-profile</profile>
 						</profiles>
 						<arguments>
 							<argument>--server.port=8090</argument>
-							<argument>--server.servlet.context-path=/app/generic</argument>
+							<argument>--server.servlet.path=/app/generic</argument>
 						</arguments>
-
 					</configuration>
 				</execution>
+				<!-- Integration test shutdown -->
 				<execution>
 					<id>post-integration-test</id>
+					<phase>post-integration-test</phase>
 					<goals>
 						<goal>stop</goal>
-					</goals>
-				</execution>
-				<execution>
-					<goals>
-						<goal>build-info</goal>
-						<goal>repackage</goal>
 					</goals>
 				</execution>
 			</executions>
@@ -372,45 +404,6 @@
 				<outputFileName>${artifactId}-openapi.json</outputFileName>
 				<outputDir>${project.build.directory}</outputDir>
 				<skip>false</skip>
-			</configuration>
-		</plugin>
-		<plugin>
-			<artifactId>maven-deploy-plugin</artifactId>
-			<version>${maven.deploy.plugin.version}</version>
-			<configuration>
-				<skip>true</skip>
-			</configuration>
-			<executions>
-				<execution>
-					<id>default-deploy</id>
-					<phase>none</phase>
-					<goals>
-						<goal>deploy</goal>
-					</goals>
-					<configuration>
-						<skip>true</skip>
-					</configuration>
-				</execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<groupId>org.sonatype.plugins</groupId>
-			<artifactId>nexus-staging-maven-plugin</artifactId>
-			<version>${nexus.staging.maven.plugin.version}</version>
-			<extensions>true</extensions>
-			<executions>
-				<execution>
-					<id>default-deploy</id>
-					<phase>none</phase>
-					<goals>
-						<goal>deploy</goal>
-					</goals>
-				</execution>
-			</executions>
-			<configuration>
-				<serverId>ossrh</serverId>
-				<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-				<autoReleaseAfterClose>false</autoReleaseAfterClose>
 			</configuration>
 		</plugin>
 	</plugins>
