--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -24,8 +24,6 @@
 		<maven.javadoc.version>3.2.0</maven.javadoc.version>
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 
-		<spring.boot.version>3.2.3</spring.boot.version>
-
 		<!-- data -->
 		<h2.version>1.4.197</h2.version>
 		<mysql.connector.version>5.1.46</mysql.connector.version>
@@ -82,6 +80,7 @@
 		<micrometer.core.version>1.4.2</micrometer.core.version>
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 		<kernel.core.version>1.3.0-beta.2</kernel.core.version>
 		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
 		<kernel.logger.version>1.3.0-beta.2</kernel.logger.version>
@@ -96,7 +95,7 @@
         <repository>
             <id>ossrh</id>
             <name>CentralRepository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <url>https://central.sonatype.com/repositories/snapshots</url>
             <layout>default</layout>
             <snapshots>
                 <enabled>true</enabled>
@@ -280,14 +279,14 @@
 	
 <distributionManagement>
 		<snapshotRepository>
-                        <id>ossrh</id>
-                        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository> 
-                 <repository>
-                        <id>ossrh</id>
-                        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository> 
-        </distributionManagement> 
+			<id>ossrh</id>
+			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://central.sonatype.com/api/v1/publisher</url>
+		</repository>
+	</distributionManagement>
         <build>
 <plugins>
 	<plugin>
@@ -340,7 +339,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${spring.boot.version}</version>
 				<configuration>
 					<executable>true</executable>
 					<layout>ZIP</layout>
@@ -351,9 +349,36 @@
 							<goal>build-info</goal>
 							<goal>repackage</goal>
 						</goals>
+						<configuration>
+							<attach>false</attach>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+		<plugin>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.8.1</version>
+              <executions>
+                 <execution>
+                    <id>default-deploy</id>
+                    <phase>deploy</phase>
+                    <goals>
+                       <goal>deploy</goal>
+                    </goals>
+                 </execution>
+              </executions>
+           </plugin>
+	<plugin>
+		<groupId>org.sonatype.central</groupId>
+		<artifactId>central-publishing-maven-plugin</artifactId>
+		<version>${central.publishing.maven.plugin.version}</version>
+		<extensions>true</extensions>
+		<configuration>
+			<publishingServerId>ossrh</publishingServerId>
+			<autoPublish>false</autoPublish>
+		</configuration>
+	</plugin>
+
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-source-plugin</artifactId>
@@ -430,46 +455,7 @@
 				<!-- <format>json</format> -->
 			</configuration>
 		</plugin>
-	<plugin>
-		<artifactId>maven-deploy-plugin</artifactId>
-		<version>${maven.deploy.plugin.version}</version>
-		<configuration>
-			<skip>true</skip>
-		</configuration>
-		<executions>
-			<execution>
-				<id>default-deploy</id>
-				<phase>none</phase>
-				<goals>
-					<goal>deploy</goal>
-				</goals>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</execution>
-		</executions>
-	</plugin>
-	<plugin>
-		<groupId>org.sonatype.plugins</groupId>
-		<artifactId>nexus-staging-maven-plugin</artifactId>
-		<version>${nexus.staging.maven.plugin.version}</version>
-		<extensions>true</extensions>
-		<executions>
-			<execution>
-				<id>default-deploy</id>
-				<phase>none</phase>
-				<goals>
-					<goal>deploy</goal>
-				</goals>
-			</execution>
-		</executions>
-		<configuration>
-			<serverId>ossrh</serverId>
-			<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-			<autoReleaseAfterClose>false</autoReleaseAfterClose>
-		</configuration>
-	</plugin>
-</plugins>
+          </plugins>
         </build>
 		<scm>
                 <connection>scm:git:git://github.com/mosip/commons.git</connection>
@@ -527,14 +513,27 @@
 					<plugin>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-maven-plugin</artifactId>
-						<version>${spring.boot.version}</version>
 						<configuration>
 							<executable>true</executable>
 							<layout>ZIP</layout>
 						</configuration>
 						<executions>
+							<!-- Build info and repackage -->
+							<execution>
+								<id>build-info-repackage</id>
+								<goals>
+									<goal>build-info</goal>
+									<goal>repackage</goal>
+								</goals>
+								<configuration>
+									<attach>false</attach>
+								</configuration>
+							</execution>
+
+							<!-- Integration test startup -->
 							<execution>
 								<id>pre-integration-test</id>
+								<phase>pre-integration-test</phase>
 								<goals>
 									<goal>start</goal>
 								</goals>
@@ -547,21 +546,18 @@
 									</profiles>
 									<arguments>
 										<argument>--server.port=8090</argument>
-										<argument>--server.servlet.context-path=/app/generic</argument>
+										<argument>--server.servlet.path=/app/generic</argument>
 									</arguments>
 
 								</configuration>
 							</execution>
+
+							<!-- Integration test shutdown -->
 							<execution>
 								<id>post-integration-test</id>
+								<phase>post-integration-test</phase>
 								<goals>
 									<goal>stop</goal>
-								</goals>
-							</execution>
-							<execution>
-								<goals>
-									<goal>build-info</goal>
-									<goal>repackage</goal>
 								</goals>
 							</execution>
 						</executions>
