--- a/deploy/apitest-masterdata/values.yaml
+++ b/deploy/apitest-masterdata/values.yaml
@@ -2,6 +2,6 @@ modules:
   idrepo:
     enabled: true
     image:
-      repository: mosipqa/apitest-masterdata
-      tag: 1.2.1.x
+      repository: mosipid/apitest-masterdata
+      tag: 1.2.1.2
       pullPolicy: Always
