--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -7,17 +7,18 @@
 	<parent>
 		<groupId>io.mosip.admin</groupId>
 		<artifactId>admin-parent</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>admin-service</artifactId>
 	<name>admin-service</name>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.3.0-SNAPSHOT</version>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springdoc.version>1.8.0</springdoc.version>
-		<kernel.version>1.2.1-SNAPSHOT</kernel.version>
+		<mosip.commons.packetmanager.version>1.3.0-SNAPSHOT</mosip.commons.packetmanager.version>
+		<kernel.core.version>1.3.0-beta.2</kernel.core.version>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.version>3.8.0</maven.compiler.version>
@@ -28,6 +29,9 @@
 		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
+		<mosip.biometric.util.version>1.3.0-beta.1</mosip.biometric.util.version>
+		<mosip.openid.bridge.version>1.3.0-beta.1</mosip.openid.bridge.version>
+		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 	</properties>
 	<dependencyManagement>
@@ -35,7 +39,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>1.2.1-SNAPSHOT</version>
+				<version>${kernel.core.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -51,7 +55,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
-			<version>${kernel.version}</version>
+			<version>${kernel.core.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.logging.log4j</groupId>
@@ -77,7 +81,7 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>5.3.0</version>
+			<version>5.2.5</version>
 		</dependency>
 		<dependency>
 		  <groupId>org.springframework.batch.extensions</groupId>
@@ -88,7 +92,7 @@
 	    <dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-authcodeflowproxy-api</artifactId>
-			<version>${kernel.version}</version>
+			<version>${mosip.openid.bridge.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.mosip.kernel</groupId>
@@ -99,7 +103,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-dataaccess-hibernate</artifactId>
-			<version>${kernel.version}</version>
+			<version>${kernel.core.version}</version>
 		</dependency>
 		<dependency>
 	      <groupId>org.springframework.boot</groupId>
@@ -136,17 +140,17 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-idvalidator-rid</artifactId>
-			<version>${kernel.version}</version>
+			<version>${kernel.core.version}</version>
    		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.6.0</version>
+			<version>2.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.commons</groupId>
 			<artifactId>commons-packet-manager</artifactId>
-			<version>${kernel.version}</version>
+			<version>${mosip.commons.packetmanager.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.cloud</groupId>
@@ -192,12 +196,12 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-cbeffutil-api</artifactId>
-			<version>${kernel.version}</version>
+			<version>${mosip.biometric.util.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.biometric.util</groupId>
 			<artifactId>biometrics-util</artifactId>
-			<version>${kernel.version}</version>
+			<version>${mosip.biometric.util.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -221,12 +225,6 @@
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcutil-jdk18on</artifactId>
 			<version>1.78.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>2.2.224</version>
-			<scope>test</scope>
 		</dependency>
 		<!--<dependency>
 			<groupId>io.mosip.kernel</groupId>
@@ -319,7 +317,7 @@
 	<dependency>
 		<groupId>io.mosip.kernel</groupId>
 		<artifactId>kernel-auth-adapter</artifactId>
-		<version>${project.version}</version>
+		<version>${mosip.openid.bridge.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>io.netty</groupId>
@@ -407,6 +405,25 @@
 				<outputDir>${project.build.directory}</outputDir>
 				<skip>false</skip>
 			</configuration>
+		</plugin>
+		<plugin>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<version>${maven.deploy.plugin.version}</version>
+			<configuration>
+				<skip>true</skip>
+			</configuration>
+			<executions>
+				<execution>
+					<id>default-deploy</id>
+					<phase>none</phase>
+					<goals>
+						<goal>deploy</goal>
+					</goals>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
+				</execution>
+			</executions>
 		</plugin>
 	</plugins>
 </build>
