--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.mosip.hotlist</groupId>
 	<artifactId>hotlist-service</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.3.0-SNAPSHOT</version>
 	<name>Hotlist Service</name>
 	<description>Service to block/unblock ids in MOSIP</description>
      <url>https://github.com/mosip/admin-services</url>
@@ -12,7 +12,7 @@
 
 		<!-- common properties -->
 		<java.version>21</java.version>
-		<postgresql.version>42.3.3</postgresql.version>
+		<postgresql.version>42.2.2</postgresql.version>
 		<maven.jacoco.version>0.8.11</maven.jacoco.version>
 		<maven.javadoc.version>3.2.0</maven.javadoc.version>
 
@@ -28,10 +28,12 @@
 		<mockito.version>3.3.3</mockito.version>
 
 		<!-- kernel properties -->
-		<kernel-core.version>1.2.1-SNAPSHOT</kernel-core.version>
-		<kernel-websubclient-api.version>1.2.1-SNAPSHOT</kernel-websubclient-api.version>
-		<kernel-logger-logback.version>1.2.1-SNAPSHOT</kernel-logger-logback.version>
-		<kernel.auth.adaptor.version>1.2.1-SNAPSHOT</kernel.auth.adaptor.version>
+		<kernel-core.version>1.3.0-beta.2</kernel-core.version>
+		<kernel.bom.version>1.3.0-beta.2</kernel.bom.version>
+		<kernel-websubclient-api.version>1.3.0-beta.2</kernel-websubclient-api.version>
+		<kernel-logger-logback.version>1.3.0-beta.2</kernel-logger-logback.version>
+		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
+		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 	</properties>
 
 	<repositories>
@@ -60,7 +62,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>1.2.1-SNAPSHOT</version>
+				<version>${kernel.bom.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -189,7 +191,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.6.0</version>
+			<version>2.5.0</version>
 		</dependency>
 	</dependencies>
 	<distributionManagement>
@@ -256,19 +258,6 @@
 						<configuration>
 							<attach>false</attach>
 						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.1</version>
-				<executions>
-					<execution>
-						<id>default-deploy</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy</goal>
-						</goals>
 					</execution>
 				</executions>
 			</plugin>
@@ -501,6 +490,25 @@
 							<outputDir>${project.build.directory}</outputDir>
 							<skip>false</skip>
 						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-deploy-plugin</artifactId>
+						<version>${maven.deploy.plugin.version}</version>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+						<executions>
+							<execution>
+								<id>default-deploy</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>deploy</goal>
+								</goals>
+								<configuration>
+									<skip>true</skip>
+								</configuration>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
