--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -7,7 +7,7 @@
 	<name>kernel-syncdata-service</name>
 	<description>Mosip commons project </description>
         <url>https://github.com/mosip/commons</url>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.3.0-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -23,7 +23,7 @@
 		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
 		<maven.javadoc.version>3.2.0</maven.javadoc.version>
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
-
+		<spring.boot.version>3.2.3</spring.boot.version>
 		<!-- data -->
 		<h2.version>1.4.197</h2.version>
 		<mysql.connector.version>5.1.46</mysql.connector.version>
@@ -81,12 +81,13 @@
 		<micrometer.registry.prometheus.version>1.4.2</micrometer.registry.prometheus.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
-		<kernel.core.version>1.2.1-SNAPSHOT</kernel.core.version>
-		<kernel.auth.adaptor.version>1.2.1-SNAPSHOT</kernel.auth.adaptor.version>
-		<kernel.logger.version>1.2.1-SNAPSHOT</kernel.logger.version>
-		<kernel.crypto.version>1.2.1-SNAPSHOT</kernel.crypto.version>
-		<kernel.keymanager.version>1.2.1-SNAPSHOT</kernel.keymanager.version>
-		<kernel-websubclient-api.version>1.2.1-SNAPSHOT</kernel-websubclient-api.version>
+		<kernel.core.version>1.3.0-beta.2</kernel.core.version>
+		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
+		<kernel.logger.version>1.3.0-beta.2</kernel.logger.version>
+		<kernel.crypto.version>1.3.0-beta.2</kernel.crypto.version>
+		<kernel.keymanager.version>1.3.0-SNAPSHOT</kernel.keymanager.version>
+		<kernel-websubclient-api.version>1.3.0-beta.2</kernel-websubclient-api.version>
+		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 	</properties>
 
     <repositories>
@@ -115,7 +116,7 @@
 			<dependency>
 				<groupId>io.mosip.kernel</groupId>
 				<artifactId>kernel-bom</artifactId>
-				<version>1.2.1-SNAPSHOT</version>
+				<version>${kernel.core.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -246,7 +247,7 @@
 		<dependency>
 		    <groupId>org.springdoc</groupId>
 		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-		    <version>2.6.0</version>
+		    <version>2.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -353,29 +354,16 @@
 					</execution>
 				</executions>
 			</plugin>
-		<plugin>
-              <artifactId>maven-deploy-plugin</artifactId>
-              <version>2.8.1</version>
-              <executions>
-                 <execution>
-                    <id>default-deploy</id>
-                    <phase>deploy</phase>
-                    <goals>
-                       <goal>deploy</goal>
-                    </goals>
-                 </execution>
-              </executions>
-           </plugin>
-	<plugin>
-		<groupId>org.sonatype.central</groupId>
-		<artifactId>central-publishing-maven-plugin</artifactId>
-		<version>${central.publishing.maven.plugin.version}</version>
-		<extensions>true</extensions>
-		<configuration>
-			<publishingServerId>ossrh</publishingServerId>
-			<autoPublish>false</autoPublish>
-		</configuration>
-	</plugin>
+			<plugin>
+				<groupId>org.sonatype.central</groupId>
+				<artifactId>central-publishing-maven-plugin</artifactId>
+				<version>${central.publishing.maven.plugin.version}</version>
+				<extensions>true</extensions>
+				<configuration>
+					<publishingServerId>ossrh</publishingServerId>
+					<autoPublish>false</autoPublish>
+				</configuration>
+			</plugin>
 
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
@@ -453,7 +441,26 @@
 				<!-- <format>json</format> -->
 			</configuration>
 		</plugin>
-          </plugins>
+		<plugin>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<version>${maven.deploy.plugin.version}</version>
+			<configuration>
+				<skip>true</skip>
+			</configuration>
+			<executions>
+				<execution>
+					<id>default-deploy</id>
+					<phase>none</phase>
+					<goals>
+						<goal>deploy</goal>
+					</goals>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
         </build>
 		<scm>
                 <connection>scm:git:git://github.com/mosip/commons.git</connection>
@@ -511,6 +518,7 @@
 					<plugin>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-maven-plugin</artifactId>
+						<version>${spring.boot.version}</version>
 						<configuration>
 							<executable>true</executable>
 							<layout>ZIP</layout>
