--- a/api-test/pom.xml
+++ b/api-test/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.mosip.masterdata</groupId>
-	<artifactId>apitest-masterdata</artifactId>
+	<artifactId>apitest-admin</artifactId>
 	<packaging>jar</packaging>
 	<name>apitest-masterdata</name>
 	<description>Parent project of MOSIP Admin Services apitests</description>
 	<url>https://github.com/mosip/admin-services</url>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.3.0-SNAPSHOT</version>
 
 	<licenses>
 		<license>
@@ -50,7 +50,7 @@
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 
 		<git.commit.id.plugin.version>3.0.1</git.commit.id.plugin.version>
-		<fileName>apitest-masterdata-1.2.1-SNAPSHOT-jar-with-dependencies</fileName>
+		<fileName>apitest-masterdata-1.3.0-SNAPSHOT-jar-with-dependencies</fileName>
 	</properties>
 
 	<dependencies>
