--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -566,7 +566,8 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>					<plugin>
+					</plugin>
+					<plugin>
 						<groupId>org.springdoc</groupId>
 						<artifactId>springdoc-openapi-maven-plugin</artifactId>
 						<version>0.2</version>
